[package]
name = "larix-lending"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.4"
num-traits = "0.2"
solana-program = "2"
spl-token = { version = "5", features = ["no-entrypoint"] }
thiserror = "2"
uint = "0.10"
anchor-lang = ">=0.30.1"
borsh = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.22"
log = "0.4.14"
proptest = "0.10"
solana-program-test = "2"
solana-sdk = "2"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
